# budgeapp-api

./: .env.dev  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: python.yml
db/: env.py  script.py.mako
db/versions/: 20241009082008-5f7a8ee3f986-create_users.py
src/budgeapp/: db.py
src/budgeapp/models/: __init__.py  base.py  user.py
