[tool.poetry]
name = "budgeapp"
version = "0.1.0"
description = ""
authors = ["Jesse Brooklyn Hannah <jesse@jbhannah.net>"]
readme = "README.md"
packages = [{ include = "budgeapp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
