[tool.poetry]
name = "budgeapp"
version = "0.1.0"
description = ""
authors = ["Jesse Brooklyn Hannah <jesse@jbhannah.net>"]
readme = "README.md"
packages = [{ include = "budgeapp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.29.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.35" }


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.3"
pre-commit = "^4.0.1"
ruff = "^0.6.9"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.dotenv]
location = ".env.dev"
